--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/base/base.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/base/base.html
@@ -19,6 +19,7 @@
 
 
         <link rel="stylesheet" href="{% static 'PostIT/css/style.css'%}">
+        <link rel="stylesheet" href="{% static 'PostIT/css/sidebar_style.css'%}">
         <!-- Google fonts -->
 
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
