--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/addPost/add_post.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/addPost/add_post.html
@@ -6,14 +6,22 @@ Page3 - Add post
 {% block content %}
 {% load crispy_forms_tags %}
 {% if user.is_authenticated %}
+{% include 'navigation/navbar-top.html' %}
+<div class="main-body">
+    {% include 'navigation/sidebar-left.html' %}
 
-<form action="" method="POST" enctype="multipart/form-data" style="color: white;">
-
-    {% csrf_token %}
-    {{ form.media }}
-    {{ form.as_p }}
-    <button type="submit">Post</button>
-</form>
+    <div class="form_label">
+        Add a post
+    </div>
+    <form action="" method="POST" id="add_post_form" enctype="multipart/form-data" style="color: white;">
+        <div class="form_contents">
+            {% csrf_token %}
+            {{ form.media }}
+            {{ form.as_p }}
+            <button type="submit">Post</button>
+        </div>
+    </form>
+</div>
 
 
 {% else %}
