--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/addPost/add_image_post.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/addPost/add_image_post.html
@@ -6,28 +6,39 @@ Page3 - Add Image Post
 {% block content %}
 {% load crispy_forms_tags %}
 {% if user.is_authenticated %}
-<form action="" method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    {% for hidden in form.hidden_fields %}
-    {{ hidden }}
-    {% endfor %}
+{% include 'navigation/navbar-top.html' %}
+<div class="main-body">
+    {% include 'navigation/sidebar-left.html' %}
+    <form action="" method="POST" enctype="multipart/form-data" id="add_post_form" style="color: white;">
+        <div class=" form_contents">
+            <div class="form_label">
+                Add a post
+            </div>
+            {% csrf_token %}
+            {% for hidden in form.hidden_fields %}
+            {{ hidden }}
+            {% endfor %}
 
-    {% for field in form %}
-    {{ field }}<br />
-    {% endfor %}
+            {% for field in form %}
+            <label>
+                {{field.label}}
+            </label>
+            {{ field }}<br />
+            {% endfor %}
 
-    {{ imageform.management_form }}
+            {{ imageform.management_form }}
 
-    {% for form in imageform %}
-    {{ form }}
-    {% endfor %}
+            {% for form in imageform %}
+            {{ form }}
+            {% endfor %}
 
 
-    <!-- {{ form.media }}
+            <!-- {{ form.media }}
     {{ form.as_p }} -->
-    <button type="submit">Post</button>
-</form>
-
+            <button type="submit">Post</button>
+        </div>
+    </form>
+</div>
 
 {% else %}
 Login first!
