--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/add_post_style.css
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/add_post_style.css
@@ -1,5 +1,10 @@
 .form_label {
-    margin-top: 100px;
+    font-size: larger;
+    padding: 5px;
+    margin-bottom: 10px;
+    width: 100%;
+    text-align: start;
+    border-bottom: 1px solid var(--grey_color);
 }
 
 .form_contents {
@@ -27,8 +32,13 @@
 }
 
 .form_contents label {
+    padding: 0 5px;
     margin-bottom: 10px;
 
+}
+
+.form_contents #id_image {
+    margin-bottom: 10px;
 }
 
 .form_contents button {
@@ -53,5 +63,7 @@
         width: 100%;
     }
 
-
+    .form_label {
+        max-width: 100%;
+    }
 }
