--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/addPost/add_post.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/addPost/add_post.html
@@ -10,18 +10,19 @@ Page3 - Add post
 <div class="main-body">
     {% include 'navigation/sidebar-left.html' %}
 
-
-    <form action="" method="POST" id="add_post_form" enctype="multipart/form-data" style="color: white;">
-        <div class="form_contents">
-            <div class="form_label">
-                Add a post
+    <div class="page_contents">
+        <form action="" method="POST" id="add_post_form" enctype="multipart/form-data" style="color: white;">
+            <div class="form_contents">
+                <div class="form_label">
+                    Add a post
+                </div>
+                {% csrf_token %}
+                {{ form.media }}
+                {{ form.as_p }}
+                <button type="submit">Post</button>
             </div>
-            {% csrf_token %}
-            {{ form.media }}
-            {{ form.as_p }}
-            <button type="submit">Post</button>
-        </div>
-    </form>
+        </form>
+    </div>
 </div>
 
 
