--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/create_gamer_profile.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/create_gamer_profile.html
@@ -13,7 +13,10 @@ Create Gamer Profile
     <div class="page-contents">
         <div class="posts-timeline">
             <div class="post">
+                <div id="currentuser" style="display: none;">{{user.username}}</div>
+                <div class="profile_exists_popup popup">
 
+                </div>
                 <form action="" method="POST" enctype="multipart/form-data" id="gamerprofile_form">
                     <div class="gamer_profile_form">
                         <div class="header">
@@ -41,11 +44,34 @@ Create Gamer Profile
                             </div>
                         </div>
                         <div class="profile-item">
+                            <div class="roles">
+                                <div class="label">How well can you play the roles ?</div>
+                            </div>
+                        </div>
+                        <div class="profile-item">
+                            <div class="label">Additional Information</div>
+
+                            <textarea name="remarks" class="remarks"></textarea>
+
+                        </div>
+                        <div class="profile-item">
+                            <input type="checkbox" name="is_looking_for_friends" id="is_looking_for_friends">
+                            <label for="is_looking_for_friends" class="label">Are you looking for people to play with
+                                ?</label>
+                        </div>
+                        <div class="profile-item">
                             <input type="checkbox" id="is_main" name="is_main">
                             <label for="is_main" class="label">Set as main profile</label>
 
                         </div>
-
+                        <div class="profile-item">
+                            <div class="label">Time Available to Play with others</div>
+                            <input name="time_available" class="time_available">
+                        </div>
+                        <div class="profile-item">
+                            <div class="label">In game communication skill</div>
+                            <input type="range" min="0" max="5" class="comm_rating input" name="comm_rating">
+                        </div>
                         <input type="checkbox" name="is_post" id="is_post">Post it for your followers to see!
                         <div class="post_form">
                             <input type="text" name="body" id="post_body">
@@ -53,6 +79,7 @@ Create Gamer Profile
                         <button type="submit" name="submit-btn">Create Profile</button>
                     </div>
                 </form>
+
 
             </div>
         </div>
@@ -77,6 +104,13 @@ Login first!
 <script src="{% static 'PostIT/js/infinite.min.js'%}"></script>
 
 <script>
+    $(document).ready(function () {
+        $('#close_popup').click(function () {
+            console.log("Close popup")
+            TogglePopup();
+        });
+    })
+
     $(".post_form").hide();
     $("#is_post").click(function () {
         if ($(this).is(":checked")) {
@@ -88,11 +122,28 @@ Login first!
     })
     $('.game').click(function () {
         var pref_game = $('.game select').val();
+        var user_name = $('#currentuser').text();
+        edit_existing_profile_link = `/edit_gamer_profile/${user_name} `
 
         $.ajax({
             type: 'GET',
             url: `/getgamerank_server/${pref_game}`,
             success: function (response) {
+
+                if (response['is_profile_exists'] == true) {
+                    $('.profile_exists_popup').empty();
+
+                    $('.profile_exists_popup').append(`<div class="popup_contents">
+                                <h3>You already have a profile for this game!</h3>
+                                <div class="popup_button_container">
+                                <a href="${edit_existing_profile_link}">
+                                    <button class="primary-button" > Edit exisitng profile </button></a>
+                                <button class="primary-button" id="close_popup" onclick="HidePopup()"> Override existing profile </button>
+                                </div>
+                            </div>`)
+                    ShowPopup();
+                }
+
                 $('.servers').empty();
                 for (let i = 0; i < response['servers'].length; i++) {
                     $('.servers').append(`<option>${response['servers'][i][0]}</option>`)
@@ -111,10 +162,30 @@ Login first!
                     $('.additional-fields').append(`<div class="label"> ${response['additional_fields'][i]}</div>
                                                     <input name=field_${i} class="field_${i} input"></input>`)
                 }
-                console.log(response['additional_fields']);
+
+                $('.roles').empty();
+                for (let i = 0; i < response['default_roles'].length; i++) {
+                    let role = response['default_roles'][i];
+                    let roles_zero_values = new Array(response['default_roles'].length).fill(0)
+
+                    $('.roles').append(`<div class="label">${response['default_roles'][i]}</div>
+                        <span><input type="range" min="0" max="5" name=role_${i} class="role_${i} input" id="role_slider"></input>
+                        <div class="role_slider_${i}"></div></span>`);
+
+                    $(`.role_${i}`).val(roles_zero_values[i])
+                }
             }
         })
     })
+
+
+    function HidePopup() {
+        $('.profile_exists_popup').hide();
+    }
+    function ShowPopup() {
+        $('.profile_exists_popup').show();
+    }
+
     let is_main = false;
     $('#is_main').click(function () {
 
