--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/utilities/button_style.css
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/static/PostIT/css/utilities/button_style.css
@@ -98,7 +98,8 @@ button {
     border-radius: 5px;
 }
 
-.profile-interct-button {
+.profile-interct-button,
+.primary-button {
     background-color: var(--primary_color);
     font-size: small;
     font-weight: bold;
